--- a/test/api-headers-editor_test.html
+++ b/test/api-headers-editor_test.html
@@ -137,7 +137,7 @@
     });
 
     suite('Switching editors', () => {
-      setup(() => {
+      setup((done) => {
         element = fixture('BasicTestFixture');
         element.viewModel = [{
           binding: 'header',
@@ -155,6 +155,7 @@
           },
           value: ''
         }];
+        flush(() => done());
       });
 
       test('Form data is default editor', () => {
@@ -167,89 +168,74 @@
         assert.notOk(editor);
       });
 
-      test('Switching to source mode removes form editor', () => {
+      test('Switching to source mode removes form editor', (done) => {
         element.sourceMode = true;
-        const editor = element.shadowRoot.querySelector('api-headers-form');
-        assert.notOk(editor);
+        flush(() => {
+          const editor = element.shadowRoot.querySelector('api-headers-form');
+          assert.notOk(editor);
+          done();
+        });
       });
 
-      test('Switching to source mode add code mirror', () => {
+      test('Switching to source mode add code mirror', (done) => {
         element.sourceMode = true;
-        const editor = element.shadowRoot.querySelector('code-mirror');
-        assert.ok(editor);
+        flush(() => {
+          const editor = element.shadowRoot.querySelector('code-mirror');
+          assert.ok(editor);
+          done();
+        });
       });
 
-      test('Passes "narrow" attribute to form editor', () => {
-        element.narrow = true;
-        const editor = element.shadowRoot.querySelector('api-headers-form');
-        assert.isTrue(editor.narrow, 'Narrow is set');
-        element.narrow = false;
-        assert.isFalse(editor.narrow, 'Narrow is removed');
+      test('currentPanel returns form editor for form mode', (done) => {
+        flush(() => {
+          const result = element.currentPanel;
+          assert.equal(result.nodeName, 'API-HEADERS-FORM');
+          done();
+        });
       });
 
-      test('Passes "disallowCustom" attribute to form editor', () => {
-        element.disallowCustom = true;
-        const editor = element.shadowRoot.querySelector('api-headers-form');
-        assert.isTrue(editor.disallowCustom, 'disallowCustom is set');
-        element.disallowCustom = false;
-        assert.isFalse(editor.disallowCustom, 'disallowCustom is removed');
-      });
-
-      test('formEditor() returns editor when form is on', () => {
-        const result = element.formEditor();
-        assert.ok(result);
-      });
-
-      test('formEditor() returns null when form is off', () => {
+      test('currentPanel returns code mirror for source mode', (done) => {
         element.sourceMode = true;
-        const result = element.formEditor();
-        assert.equal(result, null);
+        flush(() => {
+          const result = element.currentPanel;
+          assert.equal(result.nodeName, 'CODE-MIRROR');
+          done();
+        });
       });
 
-      test('codeMirror() returns null when form is on', () => {
-        const result = element.codeMirror();
-        assert.equal(result, null);
-      });
-
-      test('codeMirror() returns element when form is off', () => {
+      test('Updates model value after turning back to form mode', (done) => {
         element.sourceMode = true;
-        const result = element.codeMirror();
-        assert.ok(result);
+        flush(() => {
+          const editor = element.currentPanel;
+          editor.value = 'x-test: test-value';
+          element.sourceMode = false;
+          assert.equal(element.viewModel[0].value, 'test-value');
+          done();
+        });
       });
 
-      test('Updates model value after turning back to form mode', () => {
+      test('Updates editor when in source mode', (done) => {
         element.sourceMode = true;
-        const editor = element.codeMirror();
-        editor.value = 'x-test: test-value';
-        element.sourceMode = false;
-        assert.equal(element.viewModel[0].value, 'test-value');
+        flush(() => {
+          const editor = element.currentPanel;
+          editor.value = 'x-test: test-value';
+          assert.equal(element.value, 'x-test: test-value');
+          done();
+        });
       });
 
-      test('Updates editor when in source mode', () => {
+      test('Adds custom header from source mode', (done) => {
         element.sourceMode = true;
-        const editor = element.codeMirror();
-        editor.value = 'x-test: test-value';
-        assert.equal(element.value, 'x-test: test-value');
-      });
-
-      test('Adds custom header from source mode', () => {
-        element.sourceMode = true;
-        const editor = element.codeMirror();
-        editor.value = 'x-test: test-value\nx-custom: value';
-        element.sourceMode = false;
-        assert.lengthOf(element.viewModel, 2, 'Model has two items');
-        assert.isTrue(element.viewModel[1].isCustom, 'Second item is custom item');
-        assert.equal(element.viewModel[1].name, 'x-custom', 'Name is set');
-        assert.equal(element.viewModel[1].value, 'value', 'Value is set');
-      });
-
-      test('Disables missing headers in source code', () => {
-        element.sourceMode = true;
-        const editor = element.codeMirror();
-        editor.value = 'x-custom: value';
-        element.sourceMode = false;
-        assert.lengthOf(element.viewModel, 2, 'Model has two items');
-        assert.isFalse(element.viewModel[0].schema.enabled, 'Item is not enabled');
+        flush(() => {
+          const editor = element.currentPanel;
+          editor.value = 'x-test: test-value\nx-custom: value';
+          element.sourceMode = false;
+          assert.lengthOf(element.viewModel, 2, 'Model has two items');
+          assert.isTrue(element.viewModel[1].schema.isCustom, 'Second item is custom item');
+          assert.equal(element.viewModel[1].name, 'x-custom', 'Name is set');
+          assert.equal(element.viewModel[1].value, 'value', 'Value is set');
+          done();
+        });
       });
     });
 
