--- a/demo/index.html
+++ b/demo/index.html
@@ -1,59 +1,20 @@
 <!doctype html>
 <html lang="en">
-
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
-
   <title>api-headers-editor demo</title>
-
-  <script src="../../webcomponentsjs/webcomponents-loader.js"></script>
-
+  <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
   <link rel="import" href="../../iron-demo-helpers/demo-pages-shared-styles.html">
-  <link rel="import" href="../../iron-demo-helpers/demo-snippet.html">
-  <link rel="import" href="../api-headers-editor.html">
-
   <custom-style>
     <style is="custom-style" include="demo-pages-shared-styles">
-    h2 {
-      @apply --paper-font-title;
-    }
-    output {
-      white-space: pre-wrap;
-      @apply --paper-font-code1;
-    }
     </style>
   </custom-style>
 </head>
-
 <body>
-  <dom-bind id="demo">
-    <template is="dom-bind">
-      <div class="vertical-section-container">
-        <api-headers-editor amf-headers="[[amfModel]]" value="{{value}}"></api-headers-editor>
-        <h2>Output</h2>
-        <output>[[value]]</output>
-      </div>
-    </template>
-  </dom-bind>
-  <script>
-  (function(scope) {
-    scope._load = function() {
-      fetch('./headers-model.json')
-      .then((response) => response.json())
-      .then((data) => {
-        data = data[0]['http://raml.org/vocabularies/document#encodes'][0];
-        data = data['http://raml.org/vocabularies/http#endpoint'][0];
-        data = data['http://www.w3.org/ns/hydra/core#supportedOperation'][0];
-        data = data['http://www.w3.org/ns/hydra/core#expects'][0];
-        data = data['http://raml.org/vocabularies/http#header'];
-        scope.amfModel = data;
-      });
-    };
-    window.addEventListener('WebComponentsReady', function() {
-      scope._load();
-    });
-  })(document.getElementById('demo'));
-  </script>
+  <ul>
+    <li><a href="simple.html">Simple headers editor</a></li>
+    <li><a href="raml.html">With RAML spec via AMF model</a></li>
+  </ul>
 </body>
 </html>
