--- a/test/api-headers-editor_test.html
+++ b/test/api-headers-editor_test.html
@@ -7,6 +7,7 @@
   <title>api-headers-editor test</title>
   <script src="../../webcomponentsjs/webcomponents-loader.js"></script>
   <script src="../../web-component-tester/browser.js"></script>
+  <link rel="import" href="../../arc-polyfills/arc-polyfills.html">
   <link rel="import" href="../api-headers-editor.html">
 </head>
 
