Fix: Fixing veriable name

--- a/api-headers-editor.html
+++ b/api-headers-editor.html
@@ -20,8 +20,7 @@
     :host {
       display: block;
       position: relative;
-
-      @apply --raml-request-headers-editor;
+      @apply --api-headers-editor;
     }
 
     paper-icon-button[active] {
