--- a/test/api-headers-editor_test.html
+++ b/test/api-headers-editor_test.html
@@ -9,6 +9,7 @@
   <script src="../../web-component-tester/browser.js"></script>
   <link rel="import" href="../../arc-polyfills/arc-polyfills.html">
   <link rel="import" href="../api-headers-editor.html">
+  <script src="amf-loader.js"></script>
 </head>
 
 <body>
